# knowledge_complex_backend

./: .gitlab-ci.yml  .pre-commit-config.yaml  README.md  makefile  pyproject.toml
deploy/: Dockerfile  docker-compose.dev.yml  docker-compose.otlp.yml  docker-compose.yml
knowledge_complex_backend/: __init__.py  __main__.py  conftest.py  logging.py  settings.py
knowledge_complex_backend/db/: dependencies.py
knowledge_complex_backend/db/dao/: complexity_dao.py  gpc_dao.py  info_dao.py  site_dao.py
knowledge_complex_backend/services/: __init__.py
knowledge_complex_backend/services/redis/: lifetime.py
knowledge_complex_backend/tests/: __init__.py
knowledge_complex_backend/web/: __init__.py  application.py  lifetime.py
knowledge_complex_backend/web/api/: __init__.py  router.py
knowledge_complex_backend/web/api/complexity/: __init__.py  schema.py  views.py
knowledge_complex_backend/web/api/echo/: __init__.py  views.py
knowledge_complex_backend/web/api/gpc/: __init__.py  schema.py  views.py
knowledge_complex_backend/web/api/info/: __init__.py  schema.py  views.py
knowledge_complex_backend/web/api/monitoring/: __init__.py
knowledge_complex_backend/web/api/redis/: __init__.py  views.py
knowledge_complex_backend/web/api/site/: __init__.py  schema.py  views.py
