[project]
name = "knowledge_complex_backend"
version = "0.1.0"
description = ""
authors = []
requires-python = "~=3.11"
readme = "README.md"
maintainers = []
dependencies = [
    "fastapi>=0.89.1,<0.90",
    "uvicorn[standard]>=0.20.0,<0.21",
    "pydantic[dotenv]>=1.10.4,<2",
    "yarl>=1.8.2,<2",
    "ujson>=5.7.0,<6",
    "redis[hiredis]>=4.4.2,<5",
    "httptools==0.6.4",
    "opentelemetry-api>=1.15.0,<2",
    "opentelemetry-sdk>=1.15.0,<2",
    "opentelemetry-exporter-otlp>=1.15.0,<2",
    "opentelemetry-instrumentation>=0.36b0,<0.37",
    "opentelemetry-instrumentation-fastapi>=0.36b0,<0.37",
    "opentelemetry-instrumentation-redis>=0.36b0,<0.37",
    "loguru>=0.6.0,<0.7",
    "aiomysql>=0.1.1,<0.2",
    "numpy>=1.24.3,<2",
    "fastapi-cache2[redis]>=0.2.1,<0.3",
    "async-lru>=2.0.2,<3",
    "orjson>=3.9.0,<4",
    "elasticsearch>=8.9.0,<9",
    "neo4j>=5.17.0,<6",
    "motor>=3.3.2,<4",
    "elastic-transport>=8.17.1",
    "aiohttp>=3.11.18",
]

[dependency-groups]
dev = [
    "pytest>=7.2.1,<8",
    "flake8~=4.0.1",
    "mypy>=1.1.1,<2",
    "isort>=5.11.4,<6",
    "pre-commit>=3.0.1,<4",
    "wemake-python-styleguide>=0.17.0,<0.18",
    "black>=22.12.0,<23",
    "autoflake>=1.6.1,<2",
    "pytest-cov>=4.0.0,<5",
    "anyio>=3.6.2,<4",
    "pytest-env>=0.8.1,<0.9",
    "fakeredis>=2.5.0,<3",
    "httpx>=0.23.3,<0.24",
]

[tool.uv]

[[tool.uv.index]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple"

[tool.isort]
profile = "black"
multi_line_output = 3
src_paths = ["knowledge_complex_backend",]

[tool.mypy]
strict = true
ignore_missing_imports = true
allow_subclassing_any = true
allow_untyped_calls = true
pretty = true
show_error_codes = true
implicit_reexport = true
allow_untyped_decorators = true
warn_unused_ignores = false
warn_return_any = false
namespace_packages = true

[[tool.mypy.overrides]]
module = [
    'redis.asyncio'
]
ignore_missing_imports = true

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore:.*unclosed.*:ResourceWarning",
]
env = [
    "KNOWLEDGE_COMPLEX_BACKEND_ENVIRONMENT=pytest",
    "KNOWLEDGE_COMPLEX_BACKEND_DB_BASE=knowledge_complex_backend_test",
]

[fastapi-template.options]
project_name = "knowledge_complex_backend"
api_type = "rest"
enable_redis = "True"
enable_rmq = "None"
ci_type = "gitlab_ci"
enable_migrations = "None"
enable_taskiq = "None"
enable_kube = "None"
kube_name = "knowledge-complex-backend"
enable_routers = "True"
enable_kafka = "None"
enable_loguru = "True"
traefik_labels = "True"
add_dummy = "None"
orm = "none"
self_hosted_swagger = "None"
prometheus_enabled = "None"
sentry_enabled = "None"
otlp_enabled = "True"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
